# secure_file_manager

./: CMakeLists.txt  README.md
include/: utils.h
src/: cryptograph.cpp  cryptography.cpp  cryptography.h  main.cpp  test_crypto.cpp  utils.cpp
